include/visa.h

    /*- VISA Types --------------------------------------------------------------*/
    typedef ViObject ViEvent;
    typedef ViUInt32 ViEventType;
    typedef ViStatus(_VI_FUNCH _VI_PTR ViHndlr)(ViSession vi, ViEventType eventType, ViEvent event, ViAddr userHandle);
    /*- Interface Specific Operations -------------------------------------------*/

    ViStatus _VI_FUNC viGpibControlREN(ViSession vi, ViUInt16 mode);
    ViStatus _VI_FUNC viGpibControlATN(ViSession vi, ViUInt16 mode);
    ViStatus _VI_FUNC viGpibSendIFC(ViSession vi);
    ViStatus _VI_FUNC viGpibCommand(ViSession vi, ViConstBuf cmd, ViUInt32 cnt, ViPUInt32 retCnt);
    ViStatus _VI_FUNC viGpibPassControl(ViSession vi, ViUInt16 primAddr, ViUInt16 secAddr);
    ViStatus _VI_FUNC viVxiCommandQuery(ViSession vi, ViUInt16 mode, ViUInt32 cmd,
                                        ViPUInt32 response);
    ViStatus _VI_FUNC viAssertUtilSignal(ViSession vi, ViUInt16 line);
    ViStatus _VI_FUNC viAssertIntrSignal(ViSession vi, ViInt16 mode, ViUInt32 statusID);
    ViStatus _VI_FUNC viMapTrigger(ViSession vi, ViInt16 trigSrc, ViInt16 trigDest,
                                   ViUInt16 mode);
    ViStatus _VI_FUNC viUnmapTrigger(ViSession vi, ViInt16 trigSrc, ViInt16 trigDest);
    ViStatus _VI_FUNC viUsbControlOut(ViSession vi, ViInt16 bmRequestType, ViInt16 bRequest,
                                      ViUInt16 wValue, ViUInt16 wIndex, ViUInt16 wLength,
                                      ViConstBuf buf);
    ViStatus _VI_FUNC viUsbControlIn(ViSession vi, ViInt16 bmRequestType, ViInt16 bRequest,
                                     ViUInt16 wValue, ViUInt16 wIndex, ViUInt16 wLength,
                                     ViPBuf buf, ViPUInt16 retCnt);
    ViStatus _VI_FUNC viPxiReserveTriggers(ViSession vi, ViInt16 cnt, ViAInt16 trigBuses,
                                           ViAInt16 trigLines, ViPInt16 failureIndex);