src/prebind/bindings.rs

extern "system" {
    pub fn viGpibControlREN(vi: ViSession, mode: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viGpibControlATN(vi: ViSession, mode: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viGpibSendIFC(vi: ViSession) -> ViStatus;
}
extern "system" {
    pub fn viGpibCommand(
        vi: ViSession,
        cmd: ViConstBuf,
        cnt: ViUInt32,
        retCnt: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viGpibPassControl(vi: ViSession, primAddr: ViUInt16, secAddr: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viVxiCommandQuery(
        vi: ViSession,
        mode: ViUInt16,
        cmd: ViUInt32,
        response: ViPUInt32,
    ) -> ViStatus;
}
extern "system" {
    pub fn viAssertUtilSignal(vi: ViSession, line: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viAssertIntrSignal(vi: ViSession, mode: ViInt16, statusID: ViUInt32) -> ViStatus;
}
extern "system" {
    pub fn viMapTrigger(
        vi: ViSession,
        trigSrc: ViInt16,
        trigDest: ViInt16,
        mode: ViUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viUnmapTrigger(vi: ViSession, trigSrc: ViInt16, trigDest: ViInt16) -> ViStatus;
}
extern "system" {
    pub fn viUsbControlOut(
        vi: ViSession,
        bmRequestType: ViInt16,
        bRequest: ViInt16,
        wValue: ViUInt16,
        wIndex: ViUInt16,
        wLength: ViUInt16,
        buf: ViConstBuf,
    ) -> ViStatus;
}
extern "system" {
    pub fn viUsbControlIn(
        vi: ViSession,
        bmRequestType: ViInt16,
        bRequest: ViInt16,
        wValue: ViUInt16,
        wIndex: ViUInt16,
        wLength: ViUInt16,
        buf: ViPBuf,
        retCnt: ViPUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viPxiReserveTriggers(
        vi: ViSession,
        cnt: ViInt16,
        trigBuses: ViAInt16,
        trigLines: ViAInt16,
        failureIndex: ViPInt16,
    ) -> ViStatus;
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
